<?xml version="1.0"?>
<package format="3">
  <name>obstacle_avoider</name>
  <version>0.0.1</version>
  <description>LiDAR-based obstacle avoidance node</description>

  <maintainer email="you@example.com">Anil</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>
